<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_pattern"
    tools:context=".MainActivity">

  <!-- Toolbar for the App Title -->
  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/topAppBar"
      android:layout_width="match_parent"
      android:layout_height="?attr/actionBarSize"
      android:background="?attr/colorPrimary"
      android:elevation="9dp"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent" />

  <!-- Logo or Image -->
  <ImageView
      android:id="@+id/logoImage"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="39dp"
      android:src="@drawable/exchange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/topAppBar" />

  <!-- From Currency Input -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/fromCurrencyLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/logoImage"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/from_label_hint">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/fromValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal" />

  </com.google.android.material.textfield.TextInputLayout>

  <!-- From Currency Spinner -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/fromCurrencyUnitLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/fromCurrencyLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/from_unit_hint">

    <Spinner
        android:id="@+id/fromUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>

  <!-- To Currency Input (Non-editable) -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/toCurrencyLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      app:layout_constraintTop_toBottomOf="@id/fromCurrencyUnitLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/to_label_hint">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/toValue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:inputType="none" />

  </com.google.android.material.textfield.TextInputLayout>

  <!-- To Currency Spinner -->
  <com.google.android.material.textfield.TextInputLayout
      android:id="@+id/toCurrencyUnitLayout"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@id/toCurrencyLayout"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginStart="16dp"
      android:layout_marginEnd="16dp"
      android:hint="@string/to_unit_hint">

    <Spinner
        android:id="@+id/toUnit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

  </com.google.android.material.textfield.TextInputLayout>



<!-- Convert Button -->
<com.google.android.material.button.MaterialButton
    android:id="@+id/convertButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="32dp"
    android:text="@string/convert_button"
    android:textColor="@android:color/white"
    android:backgroundTint="?attr/colorPrimary"
    app:cornerRadius="15dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/toCurrencyUnitLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>
